# go-bzlmod

./: .gitattributes  .gitignore  .golangci.toml  .golangci.yml  AGENTS.md  CONTRIBUTING.md  LICENSE  LICENSE-APACHE  README.md  REVIEW.md  api.go  api_test.go  bazel_compat.go  bazel_compat_test.go  cache_testing.go  diff.go  diff_test.go  dprint.json  errors.go  go.mod  go.sum  graph_integration_test.go  justfile  lefthook.yml  lockfile_export.go  lockfile_export_test.go  metadata.go  metadata_test.go  multi_registry_test.go  options.go  parser.go  parser_test.go  registry.go  registry_chain.go  registry_chain_test.go  registry_local.go  registry_local_test.go  registry_test.go  registry_trace.go  registry_vendor.go  (+10 more)
.github/workflows/: ci.yml  (+2 more)
ast/: bcr_test.go  bridge.go  handler.go  handler_test.go  parser.go  parser_test.go  types.go
bazeltools/: tools.go  tools_test.go
docs/: PARSER_EXTRACTION_PLAN.md  README.md  bazel-compatibility.md  getting-started.md  graph-api.md  packages.md  resolution-options.md
e2e/: diagnostic_test.go  e2e_test.go
examples/: MODULE.bazel
examples/basic/: main.go
graph/: builder.go  doc.go  format.go  graph_test.go  query.go  types.go
label/: module.go  version.go  version_test.go
lockfile/: doc.go  io.go  lockfile_test.go  merge.go  resolution.go  types.go  version.go  version_test.go
registry/: client.go  client_test.go  doc.go  schema.go  schema_test.go  source_test.go  types.go  types_test.go  validate.go
scripts/: test-bcr.sh
selection/: doc.go  selection.go  selection_test.go  types.go
tools/: VENDORING_PLAN.md
(+11 files in other folders)
