module(name = "example_project", version = "1.0.0")

# Go rules for building Go applications
bazel_dep(name = "rules_go", version = "0.41.0")
bazel_dep(name = "gazelle", version = "0.31.0")

# Python rules (dev dependency)
bazel_dep(name = "rules_python", version = "0.22.0", dev_dependency = True)

# Protocol Buffers
bazel_dep(name = "protobuf", version = "3.19.2")
bazel_dep(name = "rules_proto", version = "5.3.0-21.7")

# Override to use a specific version of protobuf
single_version_override(
    module_name = "protobuf",
    version = "3.19.6",
)
